GtkWidgets: Added workaround for random black widgets with overlay scrollbar from https://bugs.launchpad.net/ubuntu/+source/gtk+3.0/+bug/1059374

--- a/Mioka/gtk-3.0/gtk-widgets.css
+++ b/Mioka/gtk-3.0/gtk-widgets.css
@@ -53,10 +53,20 @@
     -GtkWidget-focus-padding: 2;
     -GtkWidget-focus-line-width: 1;
     -GtkWindow-resize-grip-width: 0;
-    -GtkWindow-resize-grip-height: 0;   
+    -GtkWindow-resize-grip-height: 0;
 
     outline-color: alpha(@text_color, 0.3);
     outline-style: dashed;
     outline-offset: 2px;
+}
 
+GtkWindow {
+    color: @fg_color;
+    background-color: @bg_color;
+}
+GtkPaned {
+    background-color: @bg_color;
+}
+GtkEventBox {
+    background-color: @bg_color;
 }
